<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHomeMuni"
        android:title="@string/Inicio"
        android:icon="@drawable/ico_home" />
    <item
        android:id="@+id/navExplorarMuni"
        android:title="@string/Explorar"
        android:icon="@drawable/ico_explorar" />
    <item
        android:id="@+id/navRegistrarEventoMuni"
        android:title="@string/Registar_muni"
        android:icon="@drawable/ico_agregar" />
    <item
        android:id="@+id/navDetallesMuni"
        android:title="@string/Detalles_muni"
        android:icon="@drawable/ico_participar"/>
    <item
        android:id="@+id/navPerfilMuni"
        android:title="@string/Perfil"
        android:icon="@drawable/ico_perfil"/>
</menu>

