<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nombre_lugar_reporte_admi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_lugar_reporte"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start"/>

            <TextView
                android:id="@+id/nombre_ciudad_reporte_admi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_ciudad_reporte"
                android:textSize="14sp"
                android:gravity="end"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imagen_reporte_admi"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/descripcion_imagen_reporte"
            android:src="@drawable/ic_launcher_background"/>

        <Button
            android:id="@+id/boton_ver_reporte_admi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/boton_ver_reporte"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/verde_claro"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>