<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:orientation="vertical"
    tools:context=".vista.ciudadano.CiudadanoPerfilFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/foto_perfil"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ico_img_perfil"
                    android:contentDescription="@string/foto_perfil_desc" />

                <TextView
                    android:id="@+id/nombre_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:text="@string/texto_nameuser"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/boton_editar_perfil"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/boton_editar_perfil"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape"
                    android:backgroundTint="@color/verde_claro"
                    android:importantForAccessibility="yes"
                    android:layout_gravity="center_horizontal" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/boton_cerrar_sesion"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/boton_cerrar_sesion"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_google"
                    android:importantForAccessibility="yes"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tabTextColor="@color/black"
                android:background="@color/verde_claro"
                android:contentDescription="@string/tab_layout_desc">
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>